--- a/app/src/main/res/layout/item_todo_list.xml
+++ b/app/src/main/res/layout/item_todo_list.xml
@@ -31,9 +31,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tv_priority"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/cb_todo_list_item"
+            app:layout_constraintEnd_toStartOf="@+id/imageView" android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"/>
+    <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            app:srcCompat="@mipmap/ic_high_priority"
+            android:id="@+id/imageView"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/cb_todo_list_item"/>
+            app:layout_constraintTop_toTopOf="@+id/tv_priority"/>
 
 </android.support.constraint.ConstraintLayout>
