--- a/app/src/main/res/layout/item_todo_list.xml
+++ b/app/src/main/res/layout/item_todo_list.xml
@@ -2,15 +2,15 @@
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp"
-        android:background="@drawable/list_item_touch_selector"
-        xmlns:tools="http://schemas.android.com/tools">
+        android:background="@drawable/list_item_touch_selector">
 
     <CheckBox
-            tools:text="A todo list item"
-            android:id="@+id/cb_todo_list_item"
+            tools:text="A todo description"
+            android:id="@+id/cb_todo_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16sp"
@@ -21,27 +21,29 @@
             tools:text="@string/no_due_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/tv_due_date"
+            android:id="@+id/tv_todo_due_date"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/cb_todo_list_item"
+            app:layout_constraintTop_toBottomOf="@+id/cb_todo_description"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
             android:layout_marginStart="32dp"/>
+
     <TextView
             tools:text="@string/high_priority"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/tv_priority"
+            android:id="@+id/tv_todo_priority"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/cb_todo_list_item"
-            app:layout_constraintEnd_toStartOf="@+id/imageView" android:layout_marginEnd="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/cb_todo_description"
+            app:layout_constraintEnd_toStartOf="@+id/iv_todo_priority_star"
+            android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"/>
+
     <ImageView
             android:layout_width="20dp"
             android:layout_height="20dp"
-            app:srcCompat="@mipmap/ic_high_priority"
-            android:id="@+id/imageView"
+            android:id="@+id/iv_todo_priority_star"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
-            app:layout_constraintTop_toTopOf="@+id/tv_priority"/>
+            app:layout_constraintTop_toTopOf="@+id/tv_todo_priority"/>
 
 </android.support.constraint.ConstraintLayout>
