--- a/app/src/main/res/layout/activity_add_or_edit_todo.xml
+++ b/app/src/main/res/layout/activity_add_or_edit_todo.xml
@@ -35,16 +35,19 @@
 
             <RadioButton
                     style="@style/AddEditTaskRadioButtons"
+                    android:layout_weight="1"
                     android:id="@+id/rb_high_priority"
                     android:text="@string/high"/>
 
             <RadioButton
                     style="@style/AddEditTaskRadioButtons"
+                    android:layout_weight="1"
                     android:id="@+id/rb_medium_priority"
                     android:text="@string/medium"/>
 
             <RadioButton
                     style="@style/AddEditTaskRadioButtons"
+                    android:layout_weight="1"
                     android:id="@+id/rb_low_priority"
                     android:text="@string/low"/>
 
@@ -56,21 +59,36 @@
                 android:id="@+id/tv_due_date_label"
                 app:layout_constraintTop_toBottomOf="@+id/rg_priority"/>
 
+        <DatePicker android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/dp_due_date"
+                    android:calendarViewShown="false"
+                    android:spinnersShown="true"
+                    android:datePickerMode="spinner"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_due_date_label"                    android:layout_marginTop="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"/>
+
         <RadioGroup
                 style="@style/AddEditTaskRadioGroups"
                 android:id="@+id/rg_due_date"
-                android:weightSum="2"
+                android:weightSum="3"
                 app:layout_constraintTop_toBottomOf="@+id/tv_due_date_label">
 
             <RadioButton
                     style="@style/AddEditTaskRadioButtons"
                     android:id="@+id/rb_no_due_date"
-                    android:text="@string/no_due_date"/>
+                    android:text="@string/none"/>
 
             <RadioButton
                     style="@style/AddEditTaskRadioButtons"
                     android:id="@+id/rb_select_due_date"
-                    android:text="@string/select_due_date"/>
+                    android:text="@string/select_date"/>
+
+            <RadioButton
+                    style="@style/AddEditTaskRadioButtons"
+                    android:visibility="invisible"
+                    android:clickable="false"
+                    android:id="@+id/rb_invisible_for_lining_up"/>
 
         </RadioGroup>
 
@@ -82,6 +100,7 @@
                 android:background="@color/colorAccent"
                 android:textColor="@android:color/white"
                 android:onClick="addOrUpdateTask"
+                android:layout_margin="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
