--- a/app/src/main/res/layout/item_todo_list.xml
+++ b/app/src/main/res/layout/item_todo_list.xml
@@ -5,7 +5,10 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp"
+        android:paddingTop="16dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingBottom="8dp"
         android:background="@drawable/list_item_touch_selector">
 
     <CheckBox
@@ -14,6 +17,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16sp"
+            android:textColor="@color/colorPrimaryDark"
+            android:textStyle="bold"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
 
@@ -22,7 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tv_todo_due_date"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="4dp"
             app:layout_constraintTop_toBottomOf="@+id/cb_todo_description"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
             android:layout_marginStart="32dp"/>
@@ -32,18 +37,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tv_todo_priority"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/cb_todo_description"
+            app:layout_constraintTop_toTopOf="@+id/tv_todo_due_date"
             app:layout_constraintEnd_toStartOf="@+id/iv_todo_priority_star"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"/>
 
     <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:id="@+id/iv_todo_priority_star"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
-            app:layout_constraintTop_toTopOf="@+id/tv_todo_priority"/>
+            android:layout_marginEnd="4dp" android:layout_marginRight="4dp"
+            app:layout_constraintTop_toBottomOf="@+id/tv_todo_priority"
+            app:layout_constraintBottom_toTopOf="@+id/tv_todo_priority"/>
 
 </android.support.constraint.ConstraintLayout>
