--- a/app/src/main/res/layout/activity_add_or_edit_todo.xml
+++ b/app/src/main/res/layout/activity_add_or_edit_todo.xml
@@ -10,8 +10,8 @@
         <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="text"
                 android:hint="@string/describe_your_task"
+                android:inputType="textCapSentences"
                 android:ems="10"
                 android:id="@+id/et_task_description"
                 android:paddingLeft="3dp"
