--- a/app/src/main/res/layout/item_todo_list.xml
+++ b/app/src/main/res/layout/item_todo_list.xml
@@ -12,7 +12,7 @@
         android:background="@drawable/list_item_touch_selector">
 
     <CheckBox
-            tools:text="A todo description"
+            tools:text="A todoTask description"
             android:id="@+id/cb_todo_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
