--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorPrimaryLight">#C8E6C9</color>
     <color name="colorAccent">#9C27B0</color>
     <color name="colorOverdue">#E53935</color>
+    <color name="colorCompleted">#9E9E9E</color>
 </resources>
