--- a/app/src/main/res/menu/todo_list_menu.xml
+++ b/app/src/main/res/menu/todo_list_menu.xml
@@ -8,4 +8,9 @@
             android:orderInCategory="100"
             android:title="@string/action_settings"
             app:showAsAction="never" />
+    <item
+            android:id="@+id/action_delete_test"
+            android:orderInCategory="200"
+            android:title="@string/action_delete_test"
+            app:showAsAction="never" />
 </menu>
