Stopping point before starting on service to issue daily after-midnight notification if there are any due and/or overdue tasks

--- a/app/src/main/res/menu/todo_list_menu.xml
+++ b/app/src/main/res/menu/todo_list_menu.xml
@@ -13,4 +13,10 @@
             android:orderInCategory="200"
             android:title="@string/action_delete_test"
             app:showAsAction="never" />
+
+    <item
+            android:id="@+id/action_test_something"
+            android:orderInCategory="300"
+            android:title="@string/action_test_something"
+            app:showAsAction="never" />
 </menu>
