Back again! Notifications now list numbers of due and overdue tasks, and overdue tasks have red dates

--- a/app/src/main/res/layout/activity_todo_list.xml
+++ b/app/src/main/res/layout/activity_todo_list.xml
@@ -18,7 +18,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="end|bottom"
                 android:src="@drawable/ic_fab_add"
-                android:contentDescription="@string/add_task"
+                android:contentDescription="@string/add_new_task"
                 android:layout_margin="16dp"/>
 
     </android.support.design.widget.CoordinatorLayout>
