--- a/app/src/main/res/layout/item_todo_list.xml
+++ b/app/src/main/res/layout/item_todo_list.xml
@@ -1,57 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<layout>
+
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/item_todo_list_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="16dp"
+        android:background="@drawable/list_item_touch_selector"
         android:paddingLeft="16dp"
+        android:paddingTop="16dp"
         android:paddingRight="16dp"
-        android:paddingBottom="8dp"
-        android:background="@drawable/list_item_touch_selector">
+        android:paddingBottom="8dp">
 
-    <android.support.v7.widget.AppCompatCheckBox
-            tools:text="A todoTask description"
+        <android.support.v7.widget.AppCompatCheckBox
             android:id="@+id/cb_todo_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:textColor="@color/colorPrimaryDark"
-            android:textStyle="bold"
-            android:maxLines="1"
             android:ellipsize="end"
+            android:maxLines="1"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            tools:text="A todoTask description" />
 
-    <TextView
-            tools:text="@string/no_due_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <TextView
             android:id="@+id/tv_todo_due_date"
-            android:layout_marginTop="4dp"
-            app:layout_constraintTop_toBottomOf="@+id/cb_todo_description"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
-            android:layout_marginStart="32dp"/>
-
-    <TextView
-            tools:text="@string/high_priority"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/tv_todo_priority"
-            app:layout_constraintTop_toTopOf="@+id/tv_todo_due_date"
-            app:layout_constraintEnd_toStartOf="@+id/iv_todo_priority_star"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"/>
+            android:layout_marginStart="32dp"
+            android:layout_marginLeft="32dp"
+            android:layout_marginTop="4dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cb_todo_description"
+            tools:text="@string/no_due_date" />
 
-    <com.tachyonlabs.practicetodoapp.custom_views.PriorityStarImageView
+        <TextView
+            android:id="@+id/tv_todo_priority"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            app:layout_constraintEnd_toStartOf="@+id/iv_todo_priority_star"
+            app:layout_constraintTop_toTopOf="@+id/tv_todo_due_date"
+            tools:text="@string/high_priority" />
+
+        <com.tachyonlabs.practicetodoapp.custom_views.PriorityStarImageView
+            android:id="@+id/iv_todo_priority_star"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:id="@+id/iv_todo_priority_star"
+            android:layout_marginEnd="4dp"
+            android:layout_marginRight="4dp"
+            app:layout_constraintBottom_toTopOf="@+id/tv_todo_priority"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="4dp" android:layout_marginRight="4dp"
-            app:layout_constraintTop_toBottomOf="@+id/tv_todo_priority"
-            app:layout_constraintBottom_toTopOf="@+id/tv_todo_priority"/>
+            app:layout_constraintTop_toBottomOf="@+id/tv_todo_priority" />
 
-</android.support.constraint.ConstraintLayout>
+    </android.support.constraint.ConstraintLayout>
+</layout>
